--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <footer>
         <p>&copy; 2024 Shri Ji Paridhan. All rights reserved.</p>
     </footer>
-<img src="https://raw.githubusercontent.com/yourusername/repositoryname/branchname/yourimage1.jpg" alt="Product Image 1">
+<img src="https://raw.githubusercontent.com/yourusername/repositoryname/branchname/https://github.com/Mudit466/New-Shri-Ji-Paridhan/blob/main/Kashi%202.jpg?raw=true.jpg" alt="Product Image 1">
 
 </body>
 </html>
