--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
         .contact-info {
             font-size: 18px;
         }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+        }
+        .gallery img {
+            max-width: 200px;
+            border-radius: 10px;
+        }
+        .address {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -54,15 +67,29 @@
     </section>
 
     <section>
+        <h2>Gallery</h2>
+        <div class="gallery">
+            <img src="https://github.com/Mudit466/New-Shri-Ji-Paridhan/blob/main/Kashi%202.jpg?raw=true" alt="Product Image">
+            <!-- Add more images here with the same method -->
+        </div>
+    </section>
+
+    <section>
         <h2>Contact Us</h2>
         <p class="contact-info">Owner: Pradeep Maheshwari</p>
         <p class="contact-info">Phone: 9754171771</p>
     </section>
 
+    <section class="address">
+        <h2>Our Address</h2>
+        <p class="contact-info">Shri Ji Paridhan</p>
+        <p class="contact-info">Gairtaganj, Dist. Raisen</p>
+    </section>
+
     <footer>
         <p>&copy; 2024 Shri Ji Paridhan. All rights reserved.</p>
     </footer>
-<img src="https://raw.githubusercontent.com/yourusername/repositoryname/branchname/https://github.com/Mudit466/New-Shri-Ji-Paridhan/blob/main/Kashi%202.jpg?raw=true.jpg" alt="Product Image 1">
 
 </body>
 </html>
+
