--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section>
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="https://github.com/Mudit466/New-Shri-Ji-Paridhan/blob/main/Kashi%202.jpg?raw=true" alt="Product Image">
+            <img src="https://github.com/Mudit466/New-Shri-Ji-Paridhan/blob/main/Kashi%202.jpg?raw=true" alt="Product Image" width="300" height="auto">
             <!-- Add more images here with the same method -->
         </div>
     </section>
